crates/rome_js_formatter/tests/specs/prettier/js/comments/html-like/comment.js.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
info:
  test_file: "js\\comments\\html-like\\comment.js"
---

# Input

```js
<!--
alert(1)
-->```


# Prettier differences

```diff
--- Prettier
+++ Rome
@@ -1,3 +1,3 @@
 <!--
-alert(1); 
+alert(1)
 -->
```

# Output

```js
<!--
alert(1)
-->
```


# Errors
```
comment.js:1:1 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Expected an expression for the left hand side of the `<` operator.
  
  × This operator requires a left hand side value
  
    ┌─ comment.js:1:1
    │
  1 │ <!--
    │ ^
  
comment.js:2:1 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Invalid assignment to `alert(1)`
  
  × This expression cannot be assigned to
  
    ┌─ comment.js:2:1
    │
  2 │ alert(1)
    │ ^^^^^^^^
  
comment.js:3:3 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected an identifier, or a member expression but instead found '>'
  
  × Expected an identifier, or a member expression here
  
    ┌─ comment.js:3:3
    │
  3 │ -->
    │   ^
  
comment.js:3:4 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected an expression but instead found ''
  
  × Expected an expression here
  
    ┌─ comment.js:3:4
    │
  3 │ -->
    │    ^
  

```


